Update tmux config & karabiner config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,6 +6,9 @@ set -g default-terminal "screen-256color"
 setw -g mode-keys vi
 setw -g monitor-activity on
 
+# Status interval
+set -g status-interval 1
+
 # Quick Source
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 
@@ -31,16 +34,14 @@ bind Space last-window
 bind-key C-Space switch-client -l
 
 
-# Automatically set window title
-set-window-option -g automatic-rename on
-set-option -g set-titles on
 
 # Jump to marked plane
 bind \` switch-client -t'{marked}'
 
 # Breaking and Joining Panes
-bind j choose-window 'join-pane -h -s "%%"'
-bind J choose-window 'join-pane -s "%%"'
+bind o choose-window 'join-pane -h -s "%%"'
+bind O choose-window 'join-pane -s "%%"'
+bind n break-pane
 
 # Mouse
 set -g mouse on
@@ -65,8 +66,10 @@ bind-key s split-window -v
 bind-key & kill-window
 bind-key x kill-pane
 
+
+
 # No delay for escape key press
-# set -sg escape-time 0
+set -sg escape-time 0
 
 # Tmux Plugin Manager
 set -g @plugin 'tmux-plugins/tpm'
@@ -88,4 +91,10 @@ set -g @dracula-border-contrast true
 # vim-tmux-navigator
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+# Automatically set window title
+set -g @plugin 'ofirgall/tmux-window-name'
+
+
+
 run '~/.tmux/plugins/tpm/tpm'
+
