Update zprofile, tmux.conf, fzf

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,6 +4,12 @@ set -g default-terminal "tmux-256color"
 
 # Tmux mode
 setw -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection     # Begin selection in copy mode.
+bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle  # Begin selection in copy mode.
+bind-key -T copy-mode-vi 'y' send -X copy-selection      # Yank selection in copy mode.
+bind-key C-c choose-buffer
+
+
 setw -g monitor-activity on
 
 # Status interval
@@ -33,7 +39,8 @@ bind c new-window -c "#{pane_current_path}"
 bind Space last-window
 bind-key C-Space switch-client -l
 
-
+# Place status line up
+set -g status-position top
 
 # Jump to marked plane
 bind \` switch-client -t'{marked}'
